[package]
name = "brotli"
version = "3.3.4"
authors = ["Daniel Reiter Horn <danielrh@dropbox.com>", "The Brotli Authors"]
description = "A brotli compressor and decompressor that with an interface avoiding the rust stdlib. This makes it suitable for embedded devices and kernels. It is designed with a pluggable allocator so that the standard lib's allocator may be employed. The default build also includes a stdlib allocator and stream interface. Disable this with --features=no-stdlib. All included code is safe."
license = "BSD-3-Clause/MIT"
documentation = "https://docs.rs/brotli/"
homepage = "https://github.com/dropbox/rust-brotli"
repository = "https://github.com/dropbox/rust-brotli"
keywords = ["brotli", "decompression", "lz77", "huffman", "nostd"]
readme = "README.md"
autobins = false

[[bin]]
doc = false
name = "brotli"



[[bin]]
doc = false
name = "catbrotli"

[profile.release]
lto=true
incremental=false

[dependencies]
"alloc-no-stdlib" = {version="2.0"}
"brotli-decompressor" = {version="~2.3", default-features=false}
"alloc-stdlib" = {version="~0.2", optional=true}
"packed_simd_2" = {version="0.3", optional=true}
"sha2" = {version="~0.8", optional=true}

[features]
default=["std", "ffi-api"]
validation=["sha2"]
seccomp = ["brotli-decompressor/seccomp"]
std = ["alloc-stdlib", "brotli-decompressor/std"]
external-literal-probability = []
disable-timer = ["brotli-decompressor/disable-timer"]
benchmark = ["brotli-decompressor/benchmark"]
vector_scratch_space = []
simd = ["packed_simd_2/into_bits"]
pass-through-ffi-panics = []
ffi-api = []
