[package]
name = "brotli"
version = "8.0.2"
authors = ["Daniel Reiter Horn <danielrh@dropbox.com>", "The Brotli Authors"]
description = "A brotli compressor and decompressor that with an interface avoiding the rust stdlib. This makes it suitable for embedded devices and kernels. It is designed with a pluggable allocator so that the standard lib's allocator may be employed. The default build also includes a stdlib allocator and stream interface. Disable this with --features=no-stdlib. All included code is safe."
license = "BSD-3-Clause AND MIT"
documentation = "https://docs.rs/brotli/"
homepage = "https://github.com/dropbox/rust-brotli"
repository = "https://github.com/dropbox/rust-brotli"
keywords = ["brotli", "decompression", "lz77", "huffman", "nostd"]
categories = ["compression", "no-std"]
readme = "README.md"
autobins = false
edition = "2015"
rust-version = "1.59.0"
include = [
  "/src/**/*.rs",
  "/examples/**/*.rs",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.MIT",
]

[[bin]]
doc = false
name = "brotli"

[[bin]]
doc = false
name = "catbrotli"

[profile.release]
lto = true
incremental = false

[dependencies]
"alloc-no-stdlib" = { version = "2.0" }
"alloc-stdlib" = { version = "~0.2", optional = true }
"brotli-decompressor" = { version = "~5.0", default-features = false }

"sha2" = { version = "~0.10", optional = true }

[features]
default = ["std"]
benchmark = ["brotli-decompressor/benchmark"]
billing = []
disable-timer = ["brotli-decompressor/disable-timer"]
disallow_large_window_size = []
external-literal-probability = []
ffi-api = ["brotli-decompressor/ffi-api"]
float64 = []
floating_point_context_mixing = []
no-stdlib-ffi-binding = []
pass-through-ffi-panics = []
seccomp = ["brotli-decompressor/seccomp"]
simd = []
std = ["alloc-stdlib", "brotli-decompressor/std"]
validation = ["sha2"]
vector_scratch_space = []
