[package]
name = "brotli-ffi"
version = "1.1.2"
authors = ["Daniel Reiter Horn <danielrh@dropbox.com>", "The Brotli Authors"]
description = "A brotli compressor and decompressor that with an interface exactly matching https://github.com/google/brotli. All included code is safe except the thin exported C-compatible functions."
license = "BSD-3-Clause OR MIT"
documentation = "https://github.com/dropbox/rust-brotli/blob/master/README.md"
homepage = "https://github.com/dropbox/rust-brotli"
repository = "https://github.com/dropbox/rust-brotli"
keywords = ["brotli", "decompression", "lz77", "huffman", "nostd"]
categories = ["compression", "no-std", "external-ffi-bindings"]
readme = "README.md"
autobins = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[profile.release]
lto = true

[dependencies]
"brotli" = { version = "~8.0", default-features = false, features = ["ffi-api"] }

[features]
default = ["std"]
benchmark = ["brotli/benchmark"]
disable-timer = ["brotli/disable-timer"]
seccomp = ["brotli/seccomp"]
simd = ["brotli/simd"]
std = ["brotli/std"]
validation = ["brotli/validation"]
vector_scratch_space = ["brotli/vector_scratch_space"]
